--- a/css_skill_up/position/positioning-hw.html
+++ b/css_skill_up/position/positioning-hw.html
@@ -20,7 +20,7 @@
                 <div class="form-fields">
                     <input type="text" name="password" id="password" required placeholder="Your password">
                 </div>
-                    <button class="btn-send">Send</button>
+                    <button type="button" class="btn-send">Send</button>
             </form>
             <button type="button" class="btn-close">X</button>
     </div>
