--- a/css_skill_up/Blog_v2.0/index.html
+++ b/css_skill_up/Blog_v2.0/index.html
@@ -141,7 +141,7 @@
                     </div>
                     <div class="description">
                         <h3>Judith Gillette</h3>
-                        <h4>Graphic Desinger</h4>
+                        <h4>Graphic Designer</h4>
                     </div>
                     <div class="foto-hover">
                         <div class="social-links">
