--- a/css_skill_up/VitalikTR.github.io-master/index.html
+++ b/css_skill_up/VitalikTR.github.io-master/index.html
@@ -270,6 +270,11 @@
                                 <div class="ram"><span>RAM:</span> 1Gb</div>
                                 <div class="price">$1250<span>99</span></div>
                                 <div class="more-details">
+                                    <div class="product-quantity">
+                                        <button class="decrement-btn">-</button>
+                                        <input type="text" value="1">
+                                        <button class="increment-btn">+</button>
+                                    </div>
                                     <button>More details</button>
                                 </div>
                                 <div class="add-cart">
@@ -296,6 +301,11 @@
                                 <div class="ram"><span>RAM:</span> 1Gb</div>
                                 <div class="price">$399<span>50</span></div>
                                 <div class="more-details">
+                                    <div class="product-quantity">
+                                        <button class="decrement-btn">-</button>
+                                        <input type="text" value="1">
+                                        <button class="increment-btn">+</button>
+                                    </div>
                                     <button>More details</button>
                                 </div>
                                 <div class="add-cart">
@@ -322,6 +332,11 @@
                                 <div class="ram"><span>RAM:</span> 1Gb</div>
                                 <div class="price">$599<span>25</span></div>
                                 <div class="more-details">
+                                    <div class="product-quantity">
+                                        <button class="decrement-btn">-</button>
+                                        <input type="text" value="1">
+                                        <button class="increment-btn">+</button>
+                                    </div>
                                     <button>More details</button>
                                 </div>
                                 <div class="add-cart">
@@ -348,6 +363,11 @@
                                 <div class="ram"><span>RAM:</span> 1Gb</div>
                                 <div class="price">$1250<span>99</span></div>
                                 <div class="more-details">
+                                    <div class="product-quantity">
+                                        <button class="decrement-btn">-</button>
+                                        <input type="text" value="1">
+                                        <button class="increment-btn">+</button>
+                                    </div>
                                     <button>More details</button>
                                 </div>
                                 <div class="add-cart">
@@ -374,6 +394,11 @@
                                 <div class="ram"><span>RAM:</span> 1Gb</div>
                                 <div class="price">$399<span>50</span></div>
                                 <div class="more-details">
+                                    <div class="product-quantity">
+                                        <button class="decrement-btn">-</button>
+                                        <input type="text" value="1">
+                                        <button class="increment-btn">+</button>
+                                    </div>
                                     <button>More details</button>
                                 </div>
                                 <div class="add-cart">
@@ -400,6 +425,11 @@
                                 <div class="ram"><span>RAM:</span> 1Gb</div>
                                 <div class="price">$599<span>25</span></div>
                                 <div class="more-details">
+                                    <div class="product-quantity">
+                                        <button class="decrement-btn">-</button>
+                                        <input type="text" value="1">
+                                        <button class="increment-btn">+</button>
+                                    </div>
                                     <button>More details</button>
                                 </div>
                                 <div class="add-cart">
@@ -426,6 +456,11 @@
                                 <div class="ram"><span>RAM:</span> 1Gb</div>
                                 <div class="price">$1250<span>99</span></div>
                                 <div class="more-details">
+                                    <div class="product-quantity">
+                                        <button class="decrement-btn">-</button>
+                                        <input type="text" value="1">
+                                        <button class="increment-btn">+</button>
+                                    </div>
                                     <button>More details</button>
                                 </div>
                                 <div class="add-cart">
@@ -452,6 +487,11 @@
                                 <div class="ram"><span>RAM:</span> 1Gb</div>
                                 <div class="price">$399<span>50</span></div>
                                 <div class="more-details">
+                                    <div class="product-quantity">
+                                        <button class="decrement-btn">-</button>
+                                        <input type="text" value="1">
+                                        <button class="increment-btn">+</button>
+                                    </div>
                                     <button>More details</button>
                                 </div>
                                 <div class="add-cart">
